findleaf-deploy.yml
{
  "kind": "Deployment",
  "apiVersion": "extensions/v1beta1",
  "metadata": {
    "name": "findleaf",
    "namespace": "default",
    "selfLink": "/apis/extensions/v1beta1/namespaces/default/deployments/findleaf",
    "uid": "393d019b-982c-11e9-8723-080027bbf95a",
    "resourceVersion": "83973",
    "generation": 1,
    "creationTimestamp": "2019-06-26T16:05:31Z",
    "labels": {
      "run": "findleaf"
    },
    "annotations": {
      "deployment.kubernetes.io/revision": "1"
    }
  },
  "spec": {
    "replicas": 1,
    "selector": {
      "matchLabels": {
        "run": "findleaf"
      }
    },
    "template": {
      "metadata": {
        "creationTimestamp": null,
        "labels": {
          "run": "findleaf"
        }
      },
      "spec": {
        "containers": [
          {
            "name": "findleaf",
            "image": "jitendramore/findleaf_code:02",
            "ports": [
              {
                "containerPort": 5000,
                "protocol": "TCP"
              }
            ],
            "resources": {},
            "terminationMessagePath": "/dev/termination-log",
            "terminationMessagePolicy": "File",
            "imagePullPolicy": "IfNotPresent"
          }
        ],
        "restartPolicy": "Always",
        "terminationGracePeriodSeconds": 30,
        "dnsPolicy": "ClusterFirst",
        "securityContext": {},
        "schedulerName": "default-scheduler"
      }
    },
    "strategy": {
      "type": "RollingUpdate",
      "rollingUpdate": {
        "maxUnavailable": 1,
        "maxSurge": 1
      }
    },
    "revisionHistoryLimit": 10,
    "progressDeadlineSeconds": 600
  },
  "status": {
    "observedGeneration": 1,
    "replicas": 1,
    "updatedReplicas": 1,
    "readyReplicas": 1,
    "availableReplicas": 1,
    "conditions": [
      {
        "type": "Available",
        "status": "True",
        "lastUpdateTime": "2019-06-26T16:05:31Z",
        "lastTransitionTime": "2019-06-26T16:05:31Z",
        "reason": "MinimumReplicasAvailable",
        "message": "Deployment has minimum availability."
      },
      {
        "type": "Progressing",
        "status": "True",
        "lastUpdateTime": "2019-06-26T16:05:38Z",
        "lastTransitionTime": "2019-06-26T16:05:31Z",
        "reason": "NewReplicaSetAvailable",
        "message": "ReplicaSet \"findleaf-6f54599cbf\" has successfully progressed."
      }
    ]
  }
}
