ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: findleaf
spec:
  tls:
    - secretName: test.karmalab.com-tls
      hosts: 
         - karmalab.net
    
  rules:
  - host: karmalab.net 
  - http:
      paths:
      - path: /
        backend:
          serviceName: findleaf
          servicePort: 5000
